--- a/AdminWebiste/AdminWebiste/AdminWebiste.csproj
+++ b/AdminWebiste/AdminWebiste/AdminWebiste.csproj
@@ -212,8 +212,10 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Views\Web.config" />
-    <Content Include="Views\Home\AdminLayout.cshtml" />
+    <Content Include="Views\Layouts\AdminLayout.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
