--- a/AdminWebiste/AdminWebiste/Web.config
+++ b/AdminWebiste/AdminWebiste/Web.config
@@ -21,7 +21,7 @@
   <system.web>
     <authentication mode="None" />
     <customErrors mode="Off"/>
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="false" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.webServer>
