--- a/BMWAdmin/BMWAdmin/BMWAdmin.csproj
+++ b/BMWAdmin/BMWAdmin/BMWAdmin.csproj
@@ -171,6 +171,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SysCategoriesController.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -246,6 +247,9 @@
       <DependentUpon>BMWModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SysCategory.cs">
+      <DependentUpon>BMWModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sysdiagram.cs">
       <DependentUpon>BMWModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SysProduct.cs">
@@ -512,6 +516,11 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Admin\AdminLayouts.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\SysCategories\Create.cshtml" />
+    <Content Include="Views\SysCategories\Delete.cshtml" />
+    <Content Include="Views\SysCategories\Details.cshtml" />
+    <Content Include="Views\SysCategories\Edit.cshtml" />
+    <Content Include="Views\SysCategories\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
